# TIPE

./: CMakeLists.txt  CMakePresets.json
Motor/: .~lock.Journal.odt#  CMakeLists.txt  Journal.odt  Motor.cpp  Motor.h  bibliographie.txt  imgui.ini
Motor/include/: Vector.h  pch.h
Motor/include/Motor/: Entity.h
Motor/include/Motor/2D/: MassiveObject2D.h  Planet2D.h
Motor/libs/PGL/: CMakeLists.txt  build.bat  build_release.bat
Motor/libs/PGL/include/glad/: glad.h
Motor/libs/PGL/include/pgl/: Camera.h  Drawable.h  Logger.h  pgl.h
Motor/libs/PGL/include/pgl/basic/: Circle.h
Motor/libs/PGL/include/pgl/openGL/: Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
Motor/libs/PGL/libs/glfw/: ALL_BUILD.vcxproj  GLFW.sln  INSTALL.vcxproj.filters  uninstall.vcxproj
Motor/libs/PGL/libs/glfw/src/: update_mappings.vcxproj.filters
Motor/libs/PGL/libs/glm/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  glm.sln
Motor/libs/PGL/src/: Drawable.cpp  pgl.cpp
Motor/libs/PGL/src/basic/: Circle.cpp
Motor/libs/PGL/src/openGL/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
Motor/src/: Motor.cpp
Motor/src/Motor/: Entity.cpp
Motor/src/Motor/2D/: MassiveObject2D.cpp  Planet2D.cpp
PGL/: CMakeLists.txt  build_debug.bat
PGL/include/pgl/: Logger.h
PGL/include/pgl/openGL/: IndexBuffer.h  Renderer.h  VertexBufferLayout.h
PGL/libs/glad/: glad.c
PGL/libs/glfw/: ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj.filters
PGL/libs/glfw/docs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
PGL/libs/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj
PGL/libs/glm/: ALL_BUILD.vcxproj.filters  cmake_install.cmake
PGL/libs/glm/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glm.vcxproj  glm.vcxproj.filters
PGL/src/: Logger.cpp
PGL/src/openGL/: Renderer.cpp  Shader.cpp
